<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/editContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="10dp"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:paddingBottom="24dp">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/text_margin_top">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_name_label"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/notesLayout"
                android:layout_below="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top">
                <EditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_notes_hint"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/dueDateContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notesLayout"
                style="@style/ContainerPadding"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/dueDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:minWidth="100dp"
                    android:text="@string/due_date_label"/>
                <TextView
                    android:id="@+id/dueDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingLeft="16dp"
                    android:textColor="#1e90ff"
                    android:text="@string/set_due_date"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/statusContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dueDateContainer"
                style="@style/ContainerPadding"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:minWidth="100dp"
                    android:text="@string/status_label" />

                <Spinner
                    android:id="@+id/statusSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:entries="@array/status_array"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statusContainer"
                style="@style/ContainerPadding"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minWidth="100dp"
                    android:textSize="16sp"
                    android:text="@string/priority_label" />

                <Spinner
                    android:id="@+id/prioritySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:entries="@array/priority_array"
                    android:padding="5dp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_done_white_48dp"
        app:layout_anchor="@id/editContainer"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>