<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/viewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="10dp"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:paddingBottom="24dp">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/nameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                style="@style/ContainerPadding"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:minWidth="100dp"
                    android:text="@string/view_label_name"/>
                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/additionalNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ContainerPadding"
                android:layout_below="@+id/nameContainer"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:minWidth="100dp"
                    android:text="@string/item_notes_label"/>

                <TextView
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dueDateContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ContainerPadding"
                android:layout_below="@+id/additionalNotes"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dueDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:minWidth="100dp"
                    android:textSize="16sp"
                    android:text="@string/due_date_label"/>

                <TextView
                    android:id="@+id/dueDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:visibility="visible"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/statusContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dueDateContainer"
                style="@style/ContainerPadding"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minWidth="100dp"
                    android:textSize="16sp"
                    android:text="@string/status_label" />

                <TextView
                    android:id="@+id/statusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:text="@string/status_todo" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statusContainer"
                style="@style/ContainerPadding"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:minWidth="100dp"
                    android:text="@string/priority_label" />

                <TextView
                    android:id="@+id/priorityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:text="" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_edit_white_48dp"
        app:layout_anchor="@id/viewContainer"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>